[workspace]
members = [
    "sysx-ipc",
    "sysx-schema",
    "sysx-compiler",
    "sysx-runtime",
    "sysx-reaper",
    "sysxd",
    "sysx-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["HOMESERVER LLC <owner@arpaservers.com>"]
license = "AGPL-3.0"
repository = "https://github.com/homeserverllc/sysX"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[workspace.dependencies]
sysx-ipc = { path = "sysx-ipc" }
sysx-schema = { path = "sysx-schema" }
sysx-runtime = { path = "sysx-runtime" }
sysx-reaper = { path = "sysx-reaper" }
nix = { version = "0.29", features = ["fs", "signal", "socket", "uio", "ioctl", "event"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
bytes = "1.0"
log = "0.4"
env_logger = "0.11"
