[package]
name = "sysx-compiler"
version = "0.1.0"
edition = "2021"
description = "SysX YAML to ServiceSchema compiler and core.bin forger per 15-schema-contract-v1.md and 17 §4"
license = "MIT"

[dependencies]
sysx-ipc = { path = "../sysx-ipc" }
sysx-schema = { path = "../sysx-schema" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3"
thiserror = "1.0"
