[package]
name = "sysx-ipc"
version = "0.1.0"
edition = "2021"
description = "SysX IPC wire protocol and shared types (v1)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/homeserverllc/sysX"
keywords = ["ipc", "sysx", "cgroup", "sovereignty"]
categories = ["os", "network-programming"]

[dependencies]
nix = { version = "0.29", features = ["socket", "uio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
bytes = "1.0"
tokio = { version = "1", features = ["net", "io-util", "macros", "rt"], optional = true }

[features]
default = []
async = ["tokio"]

[lib]
name = "sysx_ipc"
path = "src/lib.rs"
