[package]
name = "sysx-reaper"
version = "0.1.0"
edition = "2021"
description = "SysX cgroup.events epoll monitor and sweep coordinator (per spec §4.1.1)"
authors = ["HOMESERVER LLC"]
license = "AGPL-3.0"

[dependencies]
sysx-runtime = { path = "../sysx-runtime" }
nix = { version = "0.29", features = ["fs", "signal", "event"] }
libc = "0.2"
log = "0.4"

[lib]
name = "sysx_reaper"
path = "src/lib.rs"

[[bin]]
name = "sysx-reaper"
path = "src/main.rs"
