[package]
name = "sysx-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime support library for SysX services"
authors = ["HOMESERVER LLC"]
license = "AGPL-3.0"

[dependencies]
sysx-ipc = { path = "../sysx-ipc" }
sysx-schema = { path = "../sysx-schema" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
