[package]
name = "sysxd"
version = "0.1.0"
edition = "2021"
description = "SysX deterministic cgroup supervisor (PID 1 replacement). Boot order 04/17, Kahn DAG pre-reactor, main reactor per 12-canonical-spec-v1.md"
authors = ["HOMESERVER LLC"]
license = "AGPL-3.0"
repository = "https://github.com/homeserverllc/sysX"

[dependencies]
sysx-ipc = { path = "../sysx-ipc" }
sysx-schema = { path = "../sysx-schema" }
sysx-runtime = { path = "../sysx-runtime" }
sysx-reaper = { path = "../sysx-reaper" }
nix = { version = "0.29", features = ["fs", "signal", "socket", "uio", "ioctl", "user"] }
libc = "0.2"
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"

[features]
default = []
